--- a/src/main/resources/static/auth.fxml
+++ b/src/main/resources/static/auth.fxml
@@ -9,30 +9,28 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-           prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="com.nure.ua.controller.AuthController">
-    <AnchorPane fx:id="mainWindow" prefHeight="362.0" prefWidth="598.0" styleClass="auth-form"
-                stylesheets="@styles/style.css">
-        <Label alignment="CENTER" layoutX="237.0" layoutY="57.0" prefHeight="30.0" prefWidth="124.0"
-               text="Authorization">
+<SplitPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nure.ua.a_clientSide.controller.AuthController">
+    <AnchorPane fx:id="mainWindow" prefHeight="362.0" prefWidth="598.0" styleClass="auth-form" stylesheets="@styles/style.css">
+        <Label alignment="CENTER" layoutX="237.0" layoutY="50.0" prefHeight="30.0" prefWidth="124.0" text="Authorization">
             <font>
-                <Font size="20.0"/>
+                <Font size="20.0" />
             </font>
         </Label>
 
-        <TextField fx:id="loginTextField" styleClass="enter-text-field" alignment="CENTER" layoutX="225.0" layoutY="154.0" promptText="Login"/>
-        <PasswordField fx:id="passwordTextField" styleClass="enter-text-field" alignment="CENTER" layoutX="225.0" layoutY="216.0"
-                       promptText="Password"/>
+        <TextField fx:id="loginTextField" alignment="CENTER" layoutX="225.0" layoutY="154.0" promptText="Login" styleClass="enter-text-field" />
+        <PasswordField fx:id="passwordTextField" alignment="CENTER" layoutX="225.0" layoutY="216.0" promptText="Password" styleClass="enter-text-field" />
 
 
-        <Button styleClass="action-btn" layoutX="273.0" layoutY="274.0" mnemonicParsing="false"
-                onMouseClicked="#onSignInAction" text="Sign in"/>
-        <Label layoutX="11.0" layoutY="333.0" text="Don't have an account?"/>
-        <Label layoutX="14.0" layoutY="358.0" onMouseClicked="#onSignupClicked" text="Sign up" textFill="#180ed5"/>
+        <Button layoutX="273.0" layoutY="274.0" mnemonicParsing="false" onMouseClicked="#onSignInAction" styleClass="action-btn" text="Sign in" />
+        <Label layoutX="11.0" layoutY="333.0" text="Don't have an account?" />
+        <Label layoutX="14.0" layoutY="358.0" onMouseClicked="#onSignupClicked" text="Sign up" textFill="#180ed5" />
         <AnchorPane id="toolPanel" fx:id="toolPanel" prefHeight="30.0" prefWidth="598.0">
-            <ImageView id="quit-btn" fitHeight="26.0" fitWidth="28.0" layoutX="571.0" layoutY="1.0"
-                       onMouseClicked="#onQuit" pickOnBounds="true" preserveRatio="true"/>
+            <ImageView id="quit-btn" fitHeight="26.0" fitWidth="28.0" layoutX="571.0" layoutY="1.0" onMouseClicked="#onQuit" pickOnBounds="true" preserveRatio="true" />
         </AnchorPane>
+      <Label fx:id="errorLabel" textAlignment="CENTER" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="302.0" prefHeight="62.0" prefWidth="598.0" text="Label" textFill="RED" visible="false">
+         <font>
+            <Font name="System Bold" size="10.0" />
+         </font>
+      </Label>
     </AnchorPane>
 </SplitPane>
