--- a/src/main/resources/static/auth.fxml
+++ b/src/main/resources/static/auth.fxml
@@ -21,7 +21,7 @@
         <PasswordField fx:id="passwordTextField" alignment="CENTER" layoutX="225.0" layoutY="216.0" promptText="Password" styleClass="enter-text-field" />
 
 
-        <Button layoutX="273.0" layoutY="274.0" mnemonicParsing="false" onMouseClicked="#onSignInAction" styleClass="action-btn" text="Sign in" />
+        <Button layoutX="273.0" layoutY="274.0" mnemonicParsing="false" onAction="#onSignInAction" styleClass="action-btn" text="Sign in" />
         <Label layoutX="11.0" layoutY="333.0" text="Don't have an account?" />
         <Label layoutX="14.0" layoutY="358.0" onMouseClicked="#onSignupClicked" text="Sign up" textFill="#180ed5" />
         <AnchorPane id="toolPanel" fx:id="toolPanel" prefHeight="30.0" prefWidth="598.0">
