--- a/src/main/resources/static/main-page.fxml
+++ b/src/main/resources/static/main-page.fxml
@@ -1,28 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-<SplitPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nure.ua.a_clientSide.controller.MainController">
-    <AnchorPane fx:id="mainWindow" prefHeight="410.0" prefWidth="598.0" stylesheets="@styles/style.css">
-        <AnchorPane id="toolPanel" fx:id="toolPanel" prefHeight="30.0" prefWidth="598.0">
-            <ImageView id="quit-btn" fitHeight="26.0" fitWidth="28.0" layoutX="571.0" layoutY="1.0" onMouseClicked="#onQuit" pickOnBounds="true" preserveRatio="true" />
+<BorderPane fx:id="mainWindow" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="462.0" prefWidth="661.0" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nure.ua.a_clientSide.controller.MainController">
+    <top>
+        <AnchorPane id="top-tool-pane" fx:id="toolPanel" prefHeight="30.0" prefWidth="630.0" stylesheets="@styles/style.css" BorderPane.alignment="CENTER">
+            <ImageView fx:id="quitButton" fitHeight="30.0" fitWidth="30.0" layoutX="570.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            </ImageView>
         </AnchorPane>
-        <AnchorPane fx:id="windowNoTool" layoutY="30.0" prefHeight="368.0" prefWidth="598.0">
-            <Line fx:id="line" endX="-26.599990844726562" endY="318.0" layoutX="192.0" layoutY="50.0" startX="-26.599990844726562" startY="-49.99999237060547" strokeWidth="2.0" />
-            <ScrollPane fx:id="chatsScrollPane" prefHeight="370.0" prefWidth="165.0">
-                <VBox fx:id="chatsVbox" prefHeight="368.0" prefWidth="162.0" />
-            </ScrollPane>
-            <ScrollPane fx:id="messagesScrollPane" layoutX="166.0" prefHeight="330.0" prefWidth="431.0">
-                <VBox fx:id="messagesVbox" prefHeight="328.0" prefWidth="428.0" />
-            </ScrollPane>
-         <Line fx:id="line1" endX="-36.00001525878906" endY="270.4000244140625" layoutX="202.0" layoutY="60.0" startX="395.20001220703125" startY="270.4000244140625" strokeWidth="2.0" />
-         <TextField fx:id="messageTextField" onAction="#onMessageTextFieldAction" layoutX="167.0" layoutY="331.0" prefHeight="37.0" prefWidth="431.0" />
-        </AnchorPane>
-    </AnchorPane>
-</SplitPane>
+    </top>
+    <left>
+        <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <top>
+                <Pane prefHeight="51.0" prefWidth="200.0" styleClass="add-user-pane" BorderPane.alignment="CENTER">
+                    <TextField fx:id="addUserTextField" layoutX="26.0" layoutY="13.0" prefHeight="26.0" prefWidth="130.0" />
+                    <ImageView fx:id="addUserButton" fitHeight="27.0" fitWidth="27.0" layoutX="160.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
+                    </ImageView>
+               <Label fx:id="errorLabel" layoutX="25.0" layoutY="19.0" prefHeight="13.0" prefWidth="131.0" styleClass="error-label" text="Label" textFill="RED" visible="false" />
+                </Pane>
+            </top>
+            <center>
+                <ScrollPane hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
+                    <VBox fx:id="chatsVBox" prefHeight="377.0" prefWidth="198.0">
+                        <AnchorPane prefHeight="50.0" prefWidth="198.0" />
+                    </VBox>
+                </ScrollPane>
+            </center>
+        </BorderPane>
+    </left>
+    <center>
+        <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <top>
+                <HBox prefHeight="51.0" prefWidth="462.0" styleClass="user-info-h-box" stylesheets="@styles/style.css" BorderPane.alignment="CENTER">
+                    <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" styleClass="avatar">
+                    </ImageView>
+                    <VBox prefHeight="51.0" prefWidth="411.0">
+                        <HBox.margin>
+                            <Insets />
+                        </HBox.margin>
+                        <padding>
+                            <Insets left="10.0" top="2.0" />
+                        </padding>
+                        <Label fx:id="nameInfoLabel" alignment="TOP_LEFT" prefHeight="27.0" prefWidth="145.0">
+                            <font>
+                                <Font size="18.0" />
+                            </font>
+                        </Label>
+                        <Label fx:id="loginInfoLabel" prefHeight="20.0" prefWidth="78.0">
+                            <font>
+                                <Font size="10.0" />
+                            </font>
+                        </Label>
+                    </VBox>
+                </HBox>
+            </top>
+            <center>
+                <ScrollPane fx:id="messagesScrollPane" hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
+                    <GridPane fx:id="messagesGridPane" prefWidth="460.0">
+                        <columnConstraints>
+                            <ColumnConstraints fillWidth="false" hgrow="NEVER" maxWidth="115.15" minWidth="115.15" percentWidth="25.0" prefWidth="115.15" />
+                            <ColumnConstraints fillWidth="false" hgrow="NEVER" maxWidth="230.3" minWidth="230.3" prefWidth="230.3" />
+                            <ColumnConstraints fillWidth="false" hgrow="NEVER" maxWidth="115.15" minWidth="115.15" prefWidth="115.15" />
+                        </columnConstraints>
+                    </GridPane>
+                </ScrollPane>
+            </center>
+            <bottom>
+                <AnchorPane prefHeight="32.0" prefWidth="462.0" style="-fx-background-color: #D3D3D3;" stylesheets="@styles/style.css" BorderPane.alignment="CENTER">
+                    <TextField fx:id="messageTextField" prefHeight="26.0" prefWidth="418.0" style="-fx-background-color: White;" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="36.0" AnchorPane.topAnchor="5.0" />
+                    <ImageView fx:id="sendMessageButton" fitHeight="26.0" fitWidth="26.0" layoutX="426.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+                    </ImageView>
+                </AnchorPane>
+            </bottom>
+        </BorderPane>
+    </center>
+</BorderPane>
