--- a/src/main/resources/static/register.fxml
+++ b/src/main/resources/static/register.fxml
@@ -3,35 +3,30 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.BorderPane?>
 
-<SplitPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nure.ua.a_clientSide.controller.RegisterController">
-    <AnchorPane fx:id="mainWindow" prefHeight="362.0" prefWidth="598.0" styleClass="auth-form" stylesheets="@styles/style.css">
-        <Label alignment="CENTER" layoutX="237.0" layoutY="57.0" prefHeight="30.0" prefWidth="124.0" text="Registration">
-            <font>
-                <Font size="20.0" />
-            </font>
-        </Label>
-
-        <TextField fx:id="nameTextField" alignment="CENTER" layoutX="225.0" layoutY="109.0" promptText="Name" styleClass="enter-text-field" />
-        <TextField fx:id="loginTextField" alignment="CENTER" layoutX="225.0" layoutY="162.0" promptText="Login" styleClass="enter-text-field" />
-        <PasswordField fx:id="passwordTextField" alignment="CENTER" layoutX="225.0" layoutY="220.0" promptText="Password" styleClass="enter-text-field" />
-
-
-        <Label layoutX="11.0" layoutY="333.0" text="Already have an account?" />
-        <Label layoutX="14.0" layoutY="358.0" onMouseClicked="#onSignInClicked" text="Sign in" textFill="#180ed5" />
-        <AnchorPane id="toolPanel" fx:id="toolPanel" prefHeight="30.0" prefWidth="598.0">
-            <ImageView id="quit-btn" fitHeight="26.0" fitWidth="28.0" layoutX="571.0" layoutY="1.0" onMouseClicked="#onQuit" pickOnBounds="true" preserveRatio="true" />
+<BorderPane id="main-window" fx:id="mainWindow" maxHeight="-Infinity" maxWidth="800.0" minHeight="-Infinity" minWidth="500.0" prefHeight="492.0" prefWidth="675.0" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nure.ua.a_clientSide.controller.RegisterController">
+    <top>
+        <AnchorPane id="top-tool-pane" fx:id="toolPanel" prefHeight="30.0" prefWidth="630.0" stylesheets="@styles/style.css" BorderPane.alignment="CENTER">
+            <ImageView fx:id="quitButton" fitHeight="30.0" fitWidth="30.0" layoutX="570.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
         </AnchorPane>
-        <Label fx:id="errorLabel" textAlignment="CENTER"  alignment="CENTER" layoutX="169.0" layoutY="302.0" prefHeight="62.0" prefWidth="259.0" text="Label" textFill="RED" visible="false">
-            <font>
-                <Font name="System Bold" size="10.0" />
-            </font>
-        </Label>
-        <Button layoutX="271.0" layoutY="274.0" mnemonicParsing="false" onMouseClicked="#onSignUpAction" styleClass="action-btn" text="Sign up" />
-    </AnchorPane>
-</SplitPane>
+    </top>
+    <center>
+        <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="431.0" prefWidth="708.0" BorderPane.alignment="CENTER">
+            <AnchorPane layoutX="152.0" layoutY="59.0" prefHeight="316.0" prefWidth="368.0" AnchorPane.bottomAnchor="57.0" AnchorPane.leftAnchor="145.0" AnchorPane.rightAnchor="145.0" AnchorPane.topAnchor="57.0">
+                <Label alignment="CENTER" prefHeight="28.0" prefWidth="358.0" styleClass="header-label" text="Registration" textAlignment="CENTER" AnchorPane.bottomAnchor="271.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                </Label>
+                <TextField fx:id="nameTextField" alignment="CENTER" layoutX="104.0" layoutY="87.0" prefWidth="150.0" promptText="Name" styleClass="input-text-field" AnchorPane.bottomAnchor="235.00000000000003" AnchorPane.leftAnchor="104.0" AnchorPane.rightAnchor="104.0" />
+                <TextField fx:id="loginTextField" alignment="CENTER" layoutX="104.0" layoutY="141.0" prefWidth="150.0" promptText="Login" styleClass="input-text-field" AnchorPane.bottomAnchor="181.00000000000003" AnchorPane.leftAnchor="104.0" AnchorPane.rightAnchor="104.0" />
+                <PasswordField fx:id="passwordTextField" alignment="CENTER" layoutX="104.0" layoutY="193.0" prefWidth="150.0" promptText="Password" styleClass="input-text-field" AnchorPane.bottomAnchor="129.00000000000003" AnchorPane.leftAnchor="104.0" AnchorPane.rightAnchor="104.0" />
+                <Button fx:id="actionButton" alignment="CENTER" layoutX="153.0" layoutY="249.20000000000002" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" styleClass="button-action" text="Sign up" AnchorPane.bottomAnchor="68.0" AnchorPane.leftAnchor="153.0" AnchorPane.rightAnchor="153.0" />
+                <Label fx:id="errorLabel" alignment="CENTER" layoutX="179.0" layoutY="294.0" prefHeight="66.0" styleClass="error-label" text="Label" textAlignment="CENTER" visible="false" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            </AnchorPane>
+            <Label layoutX="23.0" layoutY="405.0" styleClass="text-label" text="Already have an account?" />
+            <Label fx:id="signInLink" layoutX="23.0" layoutY="426.0" styleClass="text-label" text="Sign in" textFill="#1e16b2" />
+        </AnchorPane>
+    </center>
+</BorderPane>
